--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,6 +85,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/task/task-dialog.controller.js"></script>
+    <script src="app/entities/task/task-detail.controller.js"></script>
+    <script src="app/entities/task/task-delete-dialog.controller.js"></script>
+    <script src="app/entities/task/task.state.js"></script>
+    <script src="app/entities/task/task.service.js"></script>
+    <script src="app/entities/task/task.controller.js"></script>
     <script src="app/entities/manager/manager-dialog.controller.js"></script>
     <script src="app/entities/manager/manager-detail.controller.js"></script>
     <script src="app/entities/manager/manager-delete-dialog.controller.js"></script>
