--- a/src/main/webapp/app/entities/double-random/double-random-detail.html
+++ b/src/main/webapp/app/entities/double-random/double-random-detail.html
@@ -16,37 +16,45 @@
         <dd>
             <span>{{vm.doubleRandom.doubleRandomNotary}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition1">Double Random Company Condition 1</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyName">Double Random Company Name</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomCompanyCondition1}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanyName}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition2">Double Random Company Condition 2</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyArea">Double Random Company Area</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomCompanyCondition2}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanyArea}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition3">Double Random Company Condition 3</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanySupervisory">Double Random Company Supervisory</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomCompanyCondition3}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanySupervisory}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition4">Double Random Company Condition 4</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyType">Double Random Company Type</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomCompanyCondition4}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanyType}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition1">Double Random Manager Condition 1</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyIndustryType">Double Random Company Industry Type</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomManagerCondition1}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanyIndustryType}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition2">Double Random Manager Condition 2</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomCompanyRatio">Double Random Company Ratio</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomManagerCondition2}}</span>
+            <span>{{vm.doubleRandom.doubleRandomCompanyRatio}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition3">Double Random Manager Condition 3</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerName">Double Random Manager Name</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomManagerCondition3}}</span>
+            <span>{{vm.doubleRandom.doubleRandomManagerName}}</span>
         </dd>
-        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition4">Double Random Manager Condition 4</span></dt>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerNumber">Double Random Manager Number</span></dt>
         <dd>
-            <span>{{vm.doubleRandom.doubleRandomManagerCondition4}}</span>
+            <span>{{vm.doubleRandom.doubleRandomManagerNumber}}</span>
+        </dd>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerDepartment">Double Random Manager Department</span></dt>
+        <dd>
+            <span>{{vm.doubleRandom.doubleRandomManagerDepartment}}</span>
+        </dd>
+        <dt><span data-translate="drApp.doubleRandom.doubleRandomManagerRatio">Double Random Manager Ratio</span></dt>
+        <dd>
+            <span>{{vm.doubleRandom.doubleRandomManagerRatio}}</span>
         </dd>
     </dl>
 
