--- a/src/main/webapp/app/entities/double-random/double-random-dialog.html
+++ b/src/main/webapp/app/entities/double-random/double-random-dialog.html
@@ -62,129 +62,161 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyCondition1" for="field_doubleRandomCompanyCondition1">Double Random Company Condition 1</label>
-            <input type="text" class="form-control" name="doubleRandomCompanyCondition1" id="field_doubleRandomCompanyCondition1"
-                    ng-model="vm.doubleRandom.doubleRandomCompanyCondition1"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyName" for="field_doubleRandomCompanyName">Double Random Company Name</label>
+            <input type="text" class="form-control" name="doubleRandomCompanyName" id="field_doubleRandomCompanyName"
+                    ng-model="vm.doubleRandom.doubleRandomCompanyName"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomCompanyCondition1.$invalid">
+            <div ng-show="editForm.doubleRandomCompanyName.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition1.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanyName.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition1.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanyName.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyCondition2" for="field_doubleRandomCompanyCondition2">Double Random Company Condition 2</label>
-            <input type="text" class="form-control" name="doubleRandomCompanyCondition2" id="field_doubleRandomCompanyCondition2"
-                    ng-model="vm.doubleRandom.doubleRandomCompanyCondition2"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyArea" for="field_doubleRandomCompanyArea">Double Random Company Area</label>
+            <input type="text" class="form-control" name="doubleRandomCompanyArea" id="field_doubleRandomCompanyArea"
+                    ng-model="vm.doubleRandom.doubleRandomCompanyArea"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomCompanyCondition2.$invalid">
+            <div ng-show="editForm.doubleRandomCompanyArea.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition2.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanyArea.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition2.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanyArea.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyCondition3" for="field_doubleRandomCompanyCondition3">Double Random Company Condition 3</label>
-            <input type="text" class="form-control" name="doubleRandomCompanyCondition3" id="field_doubleRandomCompanyCondition3"
-                    ng-model="vm.doubleRandom.doubleRandomCompanyCondition3"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanySupervisory" for="field_doubleRandomCompanySupervisory">Double Random Company Supervisory</label>
+            <input type="text" class="form-control" name="doubleRandomCompanySupervisory" id="field_doubleRandomCompanySupervisory"
+                    ng-model="vm.doubleRandom.doubleRandomCompanySupervisory"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomCompanyCondition3.$invalid">
+            <div ng-show="editForm.doubleRandomCompanySupervisory.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition3.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanySupervisory.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition3.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanySupervisory.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyCondition4" for="field_doubleRandomCompanyCondition4">Double Random Company Condition 4</label>
-            <input type="text" class="form-control" name="doubleRandomCompanyCondition4" id="field_doubleRandomCompanyCondition4"
-                    ng-model="vm.doubleRandom.doubleRandomCompanyCondition4"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyType" for="field_doubleRandomCompanyType">Double Random Company Type</label>
+            <input type="text" class="form-control" name="doubleRandomCompanyType" id="field_doubleRandomCompanyType"
+                    ng-model="vm.doubleRandom.doubleRandomCompanyType"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomCompanyCondition4.$invalid">
+            <div ng-show="editForm.doubleRandomCompanyType.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition4.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanyType.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomCompanyCondition4.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanyType.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerCondition1" for="field_doubleRandomManagerCondition1">Double Random Manager Condition 1</label>
-            <input type="text" class="form-control" name="doubleRandomManagerCondition1" id="field_doubleRandomManagerCondition1"
-                    ng-model="vm.doubleRandom.doubleRandomManagerCondition1"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyIndustryType" for="field_doubleRandomCompanyIndustryType">Double Random Company Industry Type</label>
+            <input type="text" class="form-control" name="doubleRandomCompanyIndustryType" id="field_doubleRandomCompanyIndustryType"
+                    ng-model="vm.doubleRandom.doubleRandomCompanyIndustryType"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomManagerCondition1.$invalid">
+            <div ng-show="editForm.doubleRandomCompanyIndustryType.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition1.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanyIndustryType.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition1.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanyIndustryType.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerCondition2" for="field_doubleRandomManagerCondition2">Double Random Manager Condition 2</label>
-            <input type="text" class="form-control" name="doubleRandomManagerCondition2" id="field_doubleRandomManagerCondition2"
-                    ng-model="vm.doubleRandom.doubleRandomManagerCondition2"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomCompanyRatio" for="field_doubleRandomCompanyRatio">Double Random Company Ratio</label>
+            <input type="text" class="form-control" name="doubleRandomCompanyRatio" id="field_doubleRandomCompanyRatio"
+                    ng-model="vm.doubleRandom.doubleRandomCompanyRatio"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomManagerCondition2.$invalid">
+            <div ng-show="editForm.doubleRandomCompanyRatio.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition2.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomCompanyRatio.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition2.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomCompanyRatio.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerCondition3" for="field_doubleRandomManagerCondition3">Double Random Manager Condition 3</label>
-            <input type="text" class="form-control" name="doubleRandomManagerCondition3" id="field_doubleRandomManagerCondition3"
-                    ng-model="vm.doubleRandom.doubleRandomManagerCondition3"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerName" for="field_doubleRandomManagerName">Double Random Manager Name</label>
+            <input type="text" class="form-control" name="doubleRandomManagerName" id="field_doubleRandomManagerName"
+                    ng-model="vm.doubleRandom.doubleRandomManagerName"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomManagerCondition3.$invalid">
+            <div ng-show="editForm.doubleRandomManagerName.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition3.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomManagerName.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition3.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomManagerName.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerCondition4" for="field_doubleRandomManagerCondition4">Double Random Manager Condition 4</label>
-            <input type="text" class="form-control" name="doubleRandomManagerCondition4" id="field_doubleRandomManagerCondition4"
-                    ng-model="vm.doubleRandom.doubleRandomManagerCondition4"
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerNumber" for="field_doubleRandomManagerNumber">Double Random Manager Number</label>
+            <input type="text" class="form-control" name="doubleRandomManagerNumber" id="field_doubleRandomManagerNumber"
+                    ng-model="vm.doubleRandom.doubleRandomManagerNumber"
                     required ng-maxlength="64" />
-            <div ng-show="editForm.doubleRandomManagerCondition4.$invalid">
+            <div ng-show="editForm.doubleRandomManagerNumber.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition4.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.doubleRandomManagerNumber.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
                 <p class="help-block"
-                    ng-show="editForm.doubleRandomManagerCondition4.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    ng-show="editForm.doubleRandomManagerNumber.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    This field cannot be longer than 64 characters.
+                </p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerDepartment" for="field_doubleRandomManagerDepartment">Double Random Manager Department</label>
+            <input type="text" class="form-control" name="doubleRandomManagerDepartment" id="field_doubleRandomManagerDepartment"
+                    ng-model="vm.doubleRandom.doubleRandomManagerDepartment"
+                    required ng-maxlength="64" />
+            <div ng-show="editForm.doubleRandomManagerDepartment.$invalid">
+                <p class="help-block"
+                    ng-show="editForm.doubleRandomManagerDepartment.$error.required" data-translate="entity.validation.required">
+                    This field is required.
+                </p>
+                <p class="help-block"
+                    ng-show="editForm.doubleRandomManagerDepartment.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
+                    This field cannot be longer than 64 characters.
+                </p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label" data-translate="drApp.doubleRandom.doubleRandomManagerRatio" for="field_doubleRandomManagerRatio">Double Random Manager Ratio</label>
+            <input type="text" class="form-control" name="doubleRandomManagerRatio" id="field_doubleRandomManagerRatio"
+                    ng-model="vm.doubleRandom.doubleRandomManagerRatio"
+                    required ng-maxlength="64" />
+            <div ng-show="editForm.doubleRandomManagerRatio.$invalid">
+                <p class="help-block"
+                    ng-show="editForm.doubleRandomManagerRatio.$error.required" data-translate="entity.validation.required">
+                    This field is required.
+                </p>
+                <p class="help-block"
+                    ng-show="editForm.doubleRandomManagerRatio.$error.maxlength" data-translate="entity.validation.maxlength" translate-value-max="64">
                     This field cannot be longer than 64 characters.
                 </p>
             </div>
