--- a/src/main/webapp/app/entities/double-random/double-randoms.html
+++ b/src/main/webapp/app/entities/double-random/double-randoms.html
@@ -22,14 +22,16 @@
                     <th><span data-translate="drApp.doubleRandom.doubleRandomName">Double Random Name</span></th>
                     <th><span data-translate="drApp.doubleRandom.doubleRandomDate">Double Random Date</span></th>
                     <th><span data-translate="drApp.doubleRandom.doubleRandomNotary">Double Random Notary</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition1">Double Random Company Condition 1</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition2">Double Random Company Condition 2</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition3">Double Random Company Condition 3</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyCondition4">Double Random Company Condition 4</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition1">Double Random Manager Condition 1</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition2">Double Random Manager Condition 2</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition3">Double Random Manager Condition 3</span></th>
-                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerCondition4">Double Random Manager Condition 4</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyName">Double Random Company Name</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyArea">Double Random Company Area</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanySupervisory">Double Random Company Supervisory</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyType">Double Random Company Type</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyIndustryType">Double Random Company Industry Type</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomCompanyRatio">Double Random Company Ratio</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerName">Double Random Manager Name</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerNumber">Double Random Manager Number</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerDepartment">Double Random Manager Department</span></th>
+                    <th><span data-translate="drApp.doubleRandom.doubleRandomManagerRatio">Double Random Manager Ratio</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -39,14 +41,16 @@
                     <td>{{doubleRandom.doubleRandomName}}</td>
                     <td>{{doubleRandom.doubleRandomDate}}</td>
                     <td>{{doubleRandom.doubleRandomNotary}}</td>
-                    <td>{{doubleRandom.doubleRandomCompanyCondition1}}</td>
-                    <td>{{doubleRandom.doubleRandomCompanyCondition2}}</td>
-                    <td>{{doubleRandom.doubleRandomCompanyCondition3}}</td>
-                    <td>{{doubleRandom.doubleRandomCompanyCondition4}}</td>
-                    <td>{{doubleRandom.doubleRandomManagerCondition1}}</td>
-                    <td>{{doubleRandom.doubleRandomManagerCondition2}}</td>
-                    <td>{{doubleRandom.doubleRandomManagerCondition3}}</td>
-                    <td>{{doubleRandom.doubleRandomManagerCondition4}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanyName}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanyArea}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanySupervisory}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanyType}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanyIndustryType}}</td>
+                    <td>{{doubleRandom.doubleRandomCompanyRatio}}</td>
+                    <td>{{doubleRandom.doubleRandomManagerName}}</td>
+                    <td>{{doubleRandom.doubleRandomManagerNumber}}</td>
+                    <td>{{doubleRandom.doubleRandomManagerDepartment}}</td>
+                    <td>{{doubleRandom.doubleRandomManagerRatio}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
